utilizzo di putLong e getLong dappertutto